# TDLib-Builds

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build.yml
